<resources>
    <string name="app_name">RED8@物联网地带</string>
    <string name="qr_code">扫描二维码</string>
    <string name="temp">温度(℃):</string>
    <string name="hum">湿度(RH%):</string>
    <string name="set_name">设置名称</string>
    <string name="device_exist">设备已经存在！</string>
    <string name="device_manager">设备管理</string>
    <string name="camera_code">相机扫描设备</string>
    <string name="album_code">局域网设备</string>
    <string name="camera_reject">相机权限被拒绝</string>
    <string name="album_reject">相册权限被拒绝</string>
    <string name="code_wrong">二维码不正确</string>
    <string name="debug">--调试</string>
    <string name="device_name">设备名称</string>
    <string name="long_click_more">长按设备可以进行更多操作</string>
    <string name="input_cmd">手动输入命令</string>
    <string name="send_cmd">发送</string>
    <string name="lock">互锁</string>
    <string name="turn">翻转</string>
    <string name="pluse">点触</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="modify">修改</string>
    <string name="unbind">解绑</string>
    <string name="manual">调试</string>
    <string name="clear_data">清除数据</string>
    <string name="cancel">取消</string>
    <string name="input">输入</string>
    <string name="set_device_name">请设置设备名称</string>
    <string name="find_device">发现设备</string>
    <string name="add_device">添加设备</string>
    <string name="input_sn">输入设备序列号</string>
    <string name="input_name">输入设备名称</string>
    <string name="intpu_ip_tip">输入设备IP，如：192.168.1.166</string>
    <string name="input_ip">输入设备IP</string>
    <string name="set_right_name">请设置合法的名称</string>
    <string name="relay">开关</string>
</resources>
