<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:layout_marginBottom="1dp"
        android:padding="5dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/item_state"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_state_off"/>

        <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginLeft="10dp"
                android:text="name"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/item_lock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:padding="5dp"
                android:layout_margin="2dp"
                android:background="@drawable/shape_border_blue"
                android:gravity="center"
                android:text="@string/lock"/>

        <TextView
                android:id="@+id/item_turn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:padding="5dp"
                android:layout_margin="2dp"
                android:background="@drawable/shape_border_blue"
                android:gravity="center"
                android:text="@string/turn"/>

        <TextView
                android:id="@+id/item_pluse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:padding="5dp"
                android:layout_margin="2dp"
                android:background="@drawable/shape_border_blue"
                android:gravity="center"
                android:text="@string/pluse"/>

        <TextView
                android:id="@+id/item_on"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:padding="5dp"
                android:layout_margin="2dp"
                android:background="@drawable/shape_border_blue"
                android:gravity="center"
                android:text="@string/on"/>

        <TextView
                android:id="@+id/item_off"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:padding="5dp"
                android:layout_margin="2dp"
                android:background="@drawable/shape_border_blue"
                android:gravity="center"
                android:text="@string/off"/>
    </LinearLayout>
</LinearLayout>