<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="cc.iandroid.yundoured.activity.ManualActivity">
        <include layout="@layout/include_base_toolbar"/>
        <cc.iandroid.yundoured.widget.ClearEditText
                android:id="@+id/manual_cmd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:textSize="12sp"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:background="@drawable/shape_border_gray"
                android:hint="@string/input_cmd"/>
        <Button
                android:id="@+id/manual_send"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:text="@string/send_cmd"
                android:textColor="@color/colorWhite"
                android:background="@drawable/shape_button"/>
        <TextView
                android:id="@+id/manual_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:ellipsize="end"
                android:background="@drawable/shape_border_gray"/>
        <TextView
                android:id="@+id/manual_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="8dp"
                android:background="@drawable/shape_border_gray"
                android:text="@string/clear_data"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"/>
</LinearLayout>
