<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DeviceLocalActivity">
    <include layout="@layout/include_base_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <LinearLayout
                android:id="@+id/line_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/find_device"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/look"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/colorWhite"
                    android:padding="5dp"
                    android:text="@string/find_device"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <LinearLayout
                android:id="@+id/line_manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/manual_device"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/manual"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/colorWhite"
                    android:padding="5dp"
                    android:text="@string/add_device"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/local_device"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:id="@+id/local_manual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            android:gravity="center_horizontal"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_gravity="left"
                android:text="@string/input_sn"/>
            <EditText
                android:id="@+id/device_sn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:background="@drawable/shape_border_gray"
                android:layout_margin="5dp"
                android:hint="@string/input_sn"
                android:padding="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_gravity="left"
                android:text="@string/input_ip"/>
            <EditText
                android:id="@+id/device_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:background="@drawable/shape_border_gray"
                android:layout_margin="5dp"
                android:hint="@string/intpu_ip_tip"
                android:padding="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_gravity="left"
                android:text="@string/input_name"/>
            <EditText
                android:id="@+id/device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:background="@drawable/shape_border_gray"
                android:layout_margin="5dp"
                android:hint="@string/input_name"
                android:padding="10dp"/>
            <Button
                android:id="@+id/device_add"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/shape_button"
                android:layout_margin="10dp"
                android:textColor="@color/colorWhite"
                android:text="@string/add_device"/>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>